--- a/programmers/mengkko/momentum/index.html
+++ b/programmers/mengkko/momentum/index.html
@@ -8,7 +8,79 @@
     <div id="app">
         <h1 id="clock">00:00</h1>
         <div id="weather"></div>
+
+        <div>
+            <div id="addList">
+                <input type="text">
+                <button>Add</button>
+            </div>
+            <table class="table">
+                <caption id="todoList">To Do List</caption>
+                    <tr><th>No.</th><th>제목</th><th>편집</th><th>삭제</th></tr>
+            </table>
+        </div>
     </div>
     <script src="index.js"></script>
+    <style>
+        body {
+            width: 600px;
+            text-align: center;
+        }
+        #weather {
+            margin-bottom: 30px;
+        }
+        #addList {
+            height: 40px;
+            width: 400px;
+            border: 1px solid #168;
+            
+        }
+        #addList input{
+            font-size: 16px;
+            width: 325px;
+            padding: 10px;
+            border: 0px;
+            outline: none;
+            float: left;
+        }
+        #addList button {
+            width: 50px;
+            height: 100%;
+            border: 0px;
+            background: gray;
+            outline: none;
+            float: right;
+            color: #ffffff
+        }
+        .table {
+            margin-top: 15px;
+            border-collapse: collapse;
+            border-top: 3px solid #168;
+            width: 100%;
+            margin-bottom: 30px
+        }  
+        .table th {
+            color: #168;
+            background: #f0f6f9;
+            text-align: center;
+        }
+        .table th, .table td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        .table th:first-child, .table td:first-child {
+            border-left: 0;
+        }
+        .table th:last-child, .table td:last-child {
+            border-right: 0;
+        }
+        .table tr td:first-child{
+            text-align: center;
+        }
+        .table caption{caption-side: bottom; display: none;}
+        #addList {
+            margin: auto;
+        }
+    </style>
 </body>
 </html>
