--- a/programmers/mengkko/momentum/index.html
+++ b/programmers/mengkko/momentum/index.html
@@ -12,7 +12,7 @@
         <div>
             <div id="addList">
                 <input type="text">
-                <button>Add</button>
+                <button id="addBtn">Add</button>
             </div>
             <table class="table">
                 <caption id="todoList">To Do List</caption>
