--- a/programmers/mengkko/momentum/index.html
+++ b/programmers/mengkko/momentum/index.html
@@ -11,12 +11,19 @@
 
         <div>
             <div id="addList">
-                <input type="text">
+                <input type="text" id="addInput" value="">
                 <button id="addBtn">Add</button>
             </div>
             <table class="table">
                 <caption id="todoList">To Do List</caption>
-                    <tr><th>No.</th><th>제목</th><th>편집</th><th>삭제</th></tr>
+                    <tr><th>No.</th><th>제목</th><th>삭제</th></tr>
+            </table>
+            <table class="table" style="display: none">
+                <tbody>
+                    <tr>
+                        <th>Done</th>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
@@ -25,6 +32,14 @@
         body {
             width: 600px;
             text-align: center;
+        }
+        button {
+            width: 50px;
+            height: 100%;
+            border: 0px;
+            background: gray;
+            outline: none;
+            color: #ffffff
         }
         #weather {
             margin-bottom: 30px;
