remove jsdoc ㅠㅠ

--- a/programmers/mengkko/momentum/index.html
+++ b/programmers/mengkko/momentum/index.html
@@ -33,7 +33,7 @@
             position: absolute;
             top: 50%;
             left: 0;
-            border-bottom: 1px solid #111;
+            border-bottom: 1px solid #168;
             width: 100%;
         }
         #todoForm {
@@ -50,14 +50,12 @@
             border: 0px;
             outline: none;
         }
-        #todoForm button {
-            width: 50px;
+        .table td button {
+            font-size: 14px;
             height: 100%;
             border: 0px;
-            background: gray;
+            background: #ffffff;
             outline: none;
-            float: right;
-            color: #ffffff
         }
         .table {
             margin-top: 15px;
