모멘텀 추가작업중

--- a/programmers/ellapresso/momentum/index.html
+++ b/programmers/ellapresso/momentum/index.html
@@ -13,13 +13,15 @@
 
     <body>
         <div id='clock'></div>
-        <div class='container' id='toDoBox'>
-            <div class="input-field">
+        <div class='container row' id='toDoBox'>
+            <div class="input-field" >
                 <form>
                     <input id='input' type='text' placeholder='WRITE TO DO'>
                 </form>
             </div>
-            <div id='listBox'></div>
+            <div class='col m6'>
+                <div id='listBox' class='card-panel blue-grey darken-4'></div>
+            </div>
         </div>
     </body>
     <script src="index.js"></script>
