중간작업중

--- a/programmers/ellapresso/momentum/index.html
+++ b/programmers/ellapresso/momentum/index.html
@@ -23,6 +23,16 @@
                 <div id='listBox' class='card-panel blue-grey darken-4'></div>
             </div>
         </div>
+        <!-- TODO : close Button, input form, edit function, delete function -->
+        <div class='modal card'>
+            <span class='closeBtn'>close</span>
+            <div class='card-content'>
+                <p class='modalDate'></p>
+                <form>
+                    <span class='modalTxt'></span>
+                </form>
+            </div>
+        </div>
         <div id='calendar' class='container'>
             <table class='centered'>
                 <thead>
@@ -41,12 +51,7 @@
                 </tbody>
             </table>
         </div>
-        <div class='modal card'>
-            <div class='card-content'>
-                <p class='modalDate'></p>
-                <span class='modalTxt'></span>
-            </div>
-        </div>
+
     </body>
     <script src="todo.js"></script>
     <script src="background.js"></script>
